--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>Xavez Site</title>
   </head>
   <body>
+    <img src="center.png" alt="center.png">
     <h1>Xavez Site</h1>
-    <p><em>Audio Engineer</em></p>
-    <br>
-    <p>Jajaja ejejej jjijiji</p>
+    <p><em>Pellentesque habitant</em></p>
+    <p>Aenean pharetra lacus sed ullamcorper posuere.</p>
+    <hr>
+    <h3>Quam justo nec mauris</h3>
+    <li>Aenean ante urna</li>
+    <li>Curabitur pharetra</li>
   </body>
 </html>
