Added External CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Xavez Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+
   </head>
-  <body>
-    <img src="center.png" alt="center.png">
+
+  <body style="background-color: #F0E9D2";>
+    <img src="images/center.png" alt="center.png">
     <h1>Xavez Site</h1>
     <p><em>Pellentesque habitant</em></p>
     <p>Aenean pharetra lacus sed ullamcorper posuere.</p>
@@ -13,5 +16,7 @@
     <h3>Quam justo nec mauris</h3>
     <li>Aenean ante urna</li>
     <li>Curabitur pharetra</li>
+    <br>
+    <a href="contact.html">Contact me</a>
   </body>
 </html>
