Updated CSS code

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Contact</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico">
   </head>
   <body style="background-color: #F0E9D2";>
     <h3>Email</h3>
