--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta charset="utf-8">
     <title>Xavez Site</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto+Slab&display=swap" rel="stylesheet">
 
   </head>
 
-  <body style="background-color: #F0E9D2";>
-    <img src="images/center.png" alt="center.png">
-    <h1>Xavez Site</h1>
-    <p><em>Pellentesque habitant</em></p>
+  <body>
+
+    <div class="top">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Pedro</h1>
+      <p class="subtitle"><em>Learning Web Development</em></p>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
+    </div>
+    <div class="middle">
+    </div>
+    <div class="bottom">
+    </div>
+
     <p>Aenean pharetra lacus sed ullamcorper posuere.</p>
     <hr>
     <h3>Quam justo nec mauris</h3>
