Updated design, added some info

--- a/index.html
+++ b/index.html
@@ -16,21 +16,47 @@
     <div class="top">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>I'm Pedro</h1>
-      <p class="subtitle"><em>Learning Web Development</em></p>
+      <p><em>learning to code...</em></p>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle">
-    </div>
-    <div class="bottom">
+      <div class="profile">
+        <img src="" alt="">
+        <h2>Hello.</h2>
+        <p>I'm an audio engineer learning to code.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="skill-img" src="images/computer.png" alt="skill-img">
+          <h3>Lorem & Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <img class="skill-img" src="images/chillies.png" alt="skill-img">
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
     </div>
 
-    <p>Aenean pharetra lacus sed ullamcorper posuere.</p>
-    <hr>
-    <h3>Quam justo nec mauris</h3>
-    <li>Aenean ante urna</li>
-    <li>Curabitur pharetra</li>
-    <br>
-    <a href="contact.html">Contact me</a>
+
+    <div class="bottom">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p>© 2018 Name Surname.</p>
+    </div>
+
+
   </body>
 </html>
