--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
       <div class="profile">
         <img src="" alt="">
         <h2>Hello.</h2>
-        <p>I'm an audio engineer learning to code.</p>
+        <p>Lorem ipsum dolor sit amet, non elit. Mauris sed consectetuer.</p>
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img class="skill-img" src="images/computer.png" alt="skill-img">
-          <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <div class="skill-row-1">
+          <img class="skill-img-1" src="images/computer.png" alt="skill-img">
+          <h3>Experience</h3>
+          <p>Etiam et eu, bibendum interdum, lacus quis mauris. Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
         </div>
-        <div class="skill-row">
-          <img class="skill-img" src="images/chillies.png" alt="skill-img">
+        <div class="skill-row-1">
+          <img class="skill-img-2" src="images/chillies.png" alt="skill-img">
           <h3>Lorem Ipsum Dolor</h3>
           <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
         </div>
@@ -44,7 +44,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <p class="contact-text">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
         <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
       </div>
     </div>
@@ -54,7 +54,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2018 Name Surname.</p>
+      <p>© 2021 Xavielson</p>
     </div>
 
 
