--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2021 Xavielson</p>
+      <p class="sig">© 2021 Xavielson</p>
     </div>
 
 
