--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="bottom">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://xavielson.github.io/cv/">Website</a>
       <p class="sig">© 2021 Xavielson</p>
     </div>
 
